objects/aqi_ltng_mng__ArticleQuality_index__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>aqi_ltng_mng__Art_Meets_Content_Standard__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Article Meets Content Standard</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>aqi_ltng_mng__Article_Unique__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Article unique</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>aqi_ltng_mng__Content_complete__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Content complete</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>aqi_ltng_mng__Content_understandable__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Content understandable</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>aqi_ltng_mng__Links_in_article_valid__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Links in article valid</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>aqi_ltng_mng__Possible_Points__c</fullName>
        <defaultValue>7</defaultValue>
        <label>Possible points</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>aqi_ltng_mng__Properties_set_appropriately__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Properties set appropriately</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>aqi_ltng_mng__Selected_Languages__c</fullName>
        <defaultValue>&quot;en_US&quot;</defaultValue>
        <description>Comma separated list of Knowledge articles languages for the search page</description>
        <label>Selected languages</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>aqi_ltng_mng__Title_Accurate__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Title accurate</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Article Quality Index Definition</label>
</CustomObject>